[package]
name = "arch-mage"
version = "0.1.0"
authors = ["Hjalte Nannestad <hjalte.nannestad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "*"
nalgebra = "*"
log = "*"
pretty_env_logger = "*"
rand = "*"
